# geode

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
Source/: Camera.h  Material.h  Ray.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  TGAWriter.cpp  TGAWriter.h  World.cpp  World.h  main.cpp
